Results bar graphs: couple of minor improvements

--- a/paper2017/bargraph.tmpl.tex
+++ b/paper2017/bargraph.tmpl.tex
@@ -56,12 +56,12 @@
 \begin{document}
 	
 \begin{tikzpicture}
-\clip (-1, -1) rectangle (10.25, 6.5);
+\clip (-1, -1) rectangle (10.25, 6.75);
 \begin{axis}[
 	width=10cm,
 	height=6cm,
 	title=$$TITLE_STRING$$,
-	title style = {yshift=-1.5ex},
+	title style = {yshift=-1.5ex, font=\Large\bfseries},
 	enlarge x limits = 0.15,
 	scale only axis,
 	ymajorgrids,
