--- a/paper2017/bargraph.tmpl.tex
+++ b/paper2017/bargraph.tmpl.tex
@@ -12,7 +12,8 @@
 
 %% Colormap
 % SIFT
-\definecolor{color_sift}      {rgb}{0.9294,0.4902,0.1923}
+\definecolor{color_sift}      {rgb}{1.0,0.0,0.0}
+\definecolor{color_sift_rsift}{rgb}{0.9294,0.4902,0.1923}
 \definecolor{color_sift_ag}   {rgb}{1,0.7529,0}
 \definecolor{color_sift_ags}  {rgb}{0.9,0.65,0.4}
 % SURF
@@ -27,14 +28,10 @@
 \definecolor{color_brisk}      {rgb}{0,0,0.5961}
 \definecolor{color_brisk_ag}   {rgb}{0,0,1}
 \definecolor{color_brisk_ags}  {rgb}{0.2,0.6,1}
-% ORB
-\definecolor{color_orb}      {rgb}{0.2196,0.3412,0.1373}
-\definecolor{color_orb_ag}   {rgb}{0.20,0.5176,0.2}
-\definecolor{color_orb_ags}  {rgb}{0.5725,0.8157,0.3137}
 % LIFT
-\definecolor{color_lift}      {rgb}{0.5000,0.5000,0.5000}
-\definecolor{color_lift_ag}   {rgb}{0.6250,0.6250,0.6250}
-\definecolor{color_lift_ags}  {rgb}{0.7188,0.7188,0.7188}
+\definecolor{color_lift}      {rgb}{0.2196,0.3412,0.1373}
+\definecolor{color_lift_ag}   {rgb}{0.20,0.5176,0.2}
+\definecolor{color_lift_ags}  {rgb}{0.5725,0.8157,0.3137}
 % RADIAL
 \definecolor{color_radial_ag} {rgb}{0.8,0.0,0.0}
 \definecolor{color_radial_ags}{rgb}{0.6,0,0.1294}
@@ -75,18 +72,19 @@
 	xtick pos = left,
 	ytick pos = left,
     $$Y_AXIS_SPEC$$
-	symbolic x coords = { sift, surf, kaze, brisk, orb, lift, radial },
-	xtick = { sift, surf, kaze, brisk, orb, lift, radial },
-	xticklabels = { $$TICK_SIFT$$, $$TICK_SURF$$, $$TICK_KAZE$$, $$TICK_BRISK$$, $$TICK_ORB$$, $$TICK_LIFT$$, $$TICK_RADIAL$$ },
+	symbolic x coords = { sift, surf, kaze, brisk, lift, radial },
+	xtick = { sift, surf, kaze, brisk, lift, radial },
+	xticklabels = { $$TICK_SIFT$$, $$TICK_SURF$$, $$TICK_KAZE$$, $$TICK_BRISK$$, $$TICK_LIFT$$, $$TICK_RADIAL$$ },
 	xticklabel style = {align=center},
 	axis background/.style = {fill=none},
 	major grid style = {white!85!black},
 ]
 
 %% SIFT
-\addplot[bar group size={0}{3},shaded bar={color_sift}{}]      coordinates {(sift,$$VALUE_SIFT$$) };%
-\addplot[bar group size={1}{3},shaded bar={color_sift_ag}{}]   coordinates {(sift,$$VALUE_SIFT_AG$$) };%
-\addplot[bar group size={2}{3},shaded bar={color_sift_ags}{}]  coordinates {(sift,$$VALUE_SIFT_AGS$$) };%
+\addplot[bar group size={0}{4},shaded bar={color_sift}{}]      coordinates {(sift,$$VALUE_SIFT$$) };%
+\addplot[bar group size={1}{4},shaded bar={color_sift_rsift}{}] coordinates {(sift,$$VALUE_SIFT_ROOTSIFT$$) };%
+\addplot[bar group size={2}{4},shaded bar={color_sift_ag}{}]   coordinates {(sift,$$VALUE_SIFT_AG$$) };%
+\addplot[bar group size={3}{4},shaded bar={color_sift_ags}{}]  coordinates {(sift,$$VALUE_SIFT_AGS$$) };%
 
 %% SURF
 \addplot[bar group size={0}{3},shaded bar={color_surf}{}]      coordinates {(surf,$$VALUE_SURF$$) };%
@@ -102,11 +100,6 @@
 \addplot[bar group size={0}{3},shaded bar={color_brisk}{}]      coordinates {(brisk,$$VALUE_BRISK$$) };%
 \addplot[bar group size={1}{3},shaded bar={color_brisk_ag}{}]   coordinates {(brisk,$$VALUE_BRISK_AG$$) };%
 \addplot[bar group size={2}{3},shaded bar={color_brisk_ags}{}]  coordinates {(brisk,$$VALUE_BRISK_AGS$$) };%
-
-%% ORB
-\addplot[bar group size={0}{3},shaded bar={color_orb}{}]        coordinates {(orb,$$VALUE_ORB$$) };%
-\addplot[bar group size={1}{3},shaded bar={color_orb_ag}{}]     coordinates {(orb,$$VALUE_ORB_AG$$) };%
-\addplot[bar group size={2}{3},shaded bar={color_orb_ags}{}]    coordinates {(orb,$$VALUE_ORB_AGS$$) };%
 
 %% LIFT
 \addplot[bar group size={0}{3},shaded bar={color_lift}{}]       coordinates {(lift,$$VALUE_LIFT$$) };%
